--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <h1>matristix</h1>
+  I'm Mat. I go by @matristix online. This page is a place where I record thoughts, insights and inspiration related to minimal futuristic design.
+  <h2>Writing</h2>
+  <ul>
+    <li>2024-08 Something</li>
+    <li>2024-08 Something else</li>
+    <li>2024-04 Something other</li>
+  </ul>
 </body>
 </html>
