--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>matristix | about | portfolio</h1>
-  I'm Mat. I go by @matristix online. This page is a place where I record thoughts, insights and inspiration related to minimal futuristic design.
+  I'm Mat. I go by <i>@matristix</i> online. This page is a place where I record thoughts, insights and inspiration related to minimal futuristic design.
   <h2>writing</h2>
   <ul>
     <li>2024-08 Something</li>
