--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <a href="index.html">matristix</a> | about | portfolio
   </div>
   I'm Mat. I go by <i>@matristix</i> online. This page is a place where I record thoughts, insights and inspiration related to minimal futuristic design.
+  <h2>latest</h2>
+  <h1>2024-08 Something</h1>
+  A something is written here, about something and also about something else a little bit. Then you can click to see more. Read more -->
   <h2>writing</h2>
   <ul>
     <li>2024-08 Something</li>
