--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="index.html">matristix</a> | about | portfolio
+    <a href="index.html">matristix</a> · about · portfolio
   </div>
   I'm Mat. I go by <i>@matristix</i> online. This page is a place where I record thoughts, insights and inspiration related to minimal futuristic design.
   <h2>latest</h2>
