--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </div>
   <h2>latest</h2>
   <h1>2024-08 Something</h1>
-  A something is written here, about something and also about something else a little bit. Then you can click to see more. Read more -->
+  <a href="writing/2024-08 Something.html">
+  <p>A something is written here, about something and also about something else a little bit. Then you can click to see more. Read more -></p>
+  </a>
   <hr>
   <h2>writing</h2>
   <ul>
