--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <div class="header">
     <a href="index.html">matristix</a> · about · portfolio
   </div>
-  <h2>latest</h2>
-  <h1>2024-08 Something</h1>
+  <h3>latest</h3>
   <a href="writing/2024-08 Something.html">
-  <p>A something is written here, about something and also about something else a little bit. Then you can click to see more. Read more -></p>
+    <div class="link-container">
+      <h2>2024-08 Something</h2>
+      <p>A something is written here, about something and also about something else a little bit. Then you can click to see more... Read more -></p>
+    </div>
   </a>
-  <hr>
-  <h2>writing</h2>
+  <h3>writing</h3>
   <ul>
     <li>2024-08 Something</li>
     <li>2024-08 Something else</li>
